[metadata]
name = hsfs-aiomysql
version = attr: aiomysql.__version__
url = https://github.com/logicalclocks/aiomysql
download_url = https://pypi.python.org/pypi/hsfs-aiomysql
project_urls =
  GitHub: repo = https://github.com/logicalclocks/aiomysql
  GitHub: issues = https://github.com/logicalclocks/aiomysql/issues
description = HSFS fork for MySQL driver for aiomysql.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Dhananjay Mukhedkar
author_email = dhananjay@hopsworks.ai
classifiers =
  License :: OSI Approved :: MIT License
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Operating System :: POSIX
  Environment :: Web Environment
  Development Status :: 3 - Alpha
  Topic :: Database
  Topic :: Database :: Front-Ends
  Framework :: AsyncIO
license = MIT
keywords =
  mysql
  mariadb
  asyncio
  aiomysql
platforms =
  POSIX

[options]
python_requires = >=3.7
include_package_data = True

packages = find:

# runtime requirements
install_requires =
  PyMySQL>=1.0

[options.extras_require]
sa =
  sqlalchemy>=1.3,<=2.0.29
rsa =
  PyMySQL[rsa]>=1.0

[options.packages.find]
exclude =
  tests
  tests.*
